Fixed alignment

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -48,3 +48,48 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
+
+
+
+body, html {
+    font-family: 'Open Sans', sans-serif;
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+    color: #777;
+    width: 100% !important;
+    height: 100% !important;
+}
+h2 {
+    margin: 0 0 20px 0;
+    color: #555;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    font-size: 30px;
+}
+h3, h4 {
+    color: #222;
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: 1px;
+}
+h5 {
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 20px;
+}
+p.intro {
+    font-size: 16px;
+    margin: 12px 0 0;
+    line-height: 24px;
+}
+a {
+    color: #555;
+}
+a:hover, a:focus {
+    text-decoration: none;
+    color: #000;
+}
+ul, ol {
+    list-style: none;
+}
